# inference_node

./: .dockerignore  .gitignore  Dockerfile  LICENSE  __init__.py  docker-build.bat  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements-geti.txt  requirements.txt  run.sh  setup.bat  setup.py  setup.sh
InferenceEngine/: __init__.py  inference_engine_factory.py  result_converters.py
InferenceEngine/engines/: base_engine.py  geti_engine.py  ultralytics_engine.py
InferenceNode/: __init__.py  discovery_manager.py  hardware_detector.py  inference_node.py  log_manager.py  model_repo.py  network_scanner.py  pipeline.py  pipeline_manager.py  readme.md  setup_firewall.bat  start_node.bat  telemetry.py  utils.py  win_disco.py
InferenceNode/static/css/: style.css
InferenceNode/static/js/: app.js
InferenceNode/templates/: api_docs.html  base.html  dashboard.html  logs.html  models.html  node_discovery.html  node_info.html  pipeline_builder.html  pipeline_management.html  publisher.html  telemetry.html
ResultPublisher/: __init__.py  base_destination.py  publisher.py  result_destinations.py
ResultPublisher/plugins/: __init__.py  folder_destination.py  geti_destination.py  mqtt_destination.py  null_destination.py  opcua_destination.py  roboflow_destination.py  ros2_destination.py  serial_destination.py  webhook_destination.py  zeromq_destination.py
